# AnToanHTTT

./: .gitignore  DEMO_RBAC_NOVA_BANK.md  Dan_y.docx  Dan_y.md  HUONG_DAN_CHAY_DEMO.md  Khung_bao_cao.docx  Khung_bao_cao.md  Khung_dan_y_v3.md  README.md  pyproject.toml
artifacts/: alerts.csv  alerts.json  holdout_metrics.json  holdout_sensitivity.json  run_metadata.json
config/: default.toml
data/: holdout_manifest.json  logs_demo.csv  logs_demo.json  logs_holdout.csv  logs_risk_demo.csv  rbac_seed.json
docs/: CHUAN_BI_DEMO_RBAC.md  USER_JOURNEY_DEMO_RBAC.md
paper/risk_based_access_monitoring/: .latexmkrc  PLAN.md  PROGRESS.md  README.md  TASKS.md  main.tex  references.bib
report/: 01-introduction.md  02-foundations.md  03-system-design.md  04-implementation.md  05-experiments.md  06-conclusion.md
report/technical-report/: .gitignore  README.md  main.bbl  main.blg  main.tex  metadata.tex  preamble.tex  references.bib  titlepage.tex
scripts/: generate_holdout_dataset.py  run_holdout_sensitivity.py
src/rbac_guard/: __init__.py  api.py  audit_adapter.py  cli.py  config.py  context.py  metrics.py  models.py  parser.py  rbac.py  reporting.py  rules.py  scoring.py  service.py  web.py
tests/: test_api.py  test_audit_adapter.py  test_cli.py  test_config.py  test_context.py  test_metrics.py  test_parser.py  test_rbac.py  test_reporting.py  test_rules.py  test_scoring.py  test_service.py  test_web_helpers.py
tests/fixtures/: invalid_rows.csv
web/: package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
(+89 files in other folders)
