[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rbac-guard"
version = "0.1.0"
description = "RBAC and rule-based security log analysis proof of concept"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
web = ["streamlit>=1.35", "pandas>=2.2"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "streamlit>=1.35", "pandas>=2.2", "fastapi>=0.115", "httpx>=0.27"]

[project.scripts]
rbac-guard = "rbac_guard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
omit = ["src/rbac_guard/cli.py", "src/rbac_guard/web.py"]
